# fast-local-sync

./: .gitignore  Cargo.toml  README.md
src/: copy.rs  dir_scanner.rs  file_copier.rs  main.rs  stats.rs
