[package]
name = "fast-local-sync"
version = "0.1.0"
edition = "2021"
authors = ["Remi Rampin <remi@rampin.org"]
description = "Fast directory sync tool for the local filesystem"
readme = "README.md"
repository = "https://github.com/remram44/fast-local-sync"
keywords = ["sync", "copy", "filesystem", "rsync"]
license = "MIT"

[features]
default = ["acl", "attr", "metrics"]
acl = ["dep:exacl"]
attr = ["dep:xattr"]
metrics = ["dep:tokio", "dep:warp"]

[dependencies]
crossbeam = "0.8"
filetime = "0.2"
pretty_env_logger = "0.5"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }

exacl = { version = "0.12", optional = true }
xattr = { version = "1.3", optional = true }

tokio = { version = "1.40", optional = true, default-features = false, features = ["net", "rt"] }
warp = { version = "0.3", optional = true, default-features = false }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
